Updates to basic appsettings related to db config

--- a/aspnet-core/src/inpro.lepton.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/inpro.lepton.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=lepton;Trusted_Connection=True;TrustServerCertificate=True"
+  "Default": "Server=.\\SQLEXPRESS;Database=inpro_lepton;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44346",
