--- a/aspnet-core/src/inpro.lepton.DbMigrator/appsettings.json
+++ b/aspnet-core/src/inpro.lepton.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=lepton;Trusted_Connection=True;TrustServerCertificate=True"
+  "Default": "Server=.\\SQLEXPRESS;Database=inpro_lepton;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
